--- a/src/assets/style.scss
+++ b/src/assets/style.scss
@@ -12,7 +12,19 @@ a {
   }
 }
 
-// EDIÇÃO DE CSS DE TERCEIROS
+// 3rd part CSS styling
+.accordion-item:not(:first-of-type) {
+  border-top: 1px solid rgba(0,0,0,.125);
+}
+.accordion-item {
+  border-radius: 0 !important;
+  margin-bottom: .25rem;
+}
+
+
+.accordion-button {
+  padding: .5rem 1.25rem;
+}
 
 .accordion-button:not(.collapsed) {
   background: none;
@@ -21,8 +33,15 @@ a {
   position: relative;
 }
 .form-check-input{
-  width: 1.2rem;
-  height: 1.2rem;
+  border-radius: 0.2em !important;
+  width: 1rem;
+  height: 1rem;
+  margin: .15rem;
+
+  &:checked {
+    background-color: #fd7e14;
+    border-color: #ffc107;
+  }
 }
 .accordion-button {
   width: auto;
