edit e delete done

--- a/src/assets/style.scss
+++ b/src/assets/style.scss
@@ -64,6 +64,7 @@ div#projects {
 
 .accordion-button:not(.collapsed) {
   background: none;
+  box-shadow: none;
 }
 .accordion-item {
   position: relative;
